# splatkit

./: .gitignore  LICENSE  MANIFEST.in  README.md  index.html  main.py  pyproject.toml  test.py
.github/workflows/: docs.yml  publish.yml
docs/: DEVELOPER.md  requirements.txt
docs/source/: conf.py  index.rst  installation.rst
docs/source/api/: data_provider.rst  densification.rst  index.rst  trainer.rst
docs/source/api/_autosummary/: splatkit.data_provider.base.rst  splatkit.data_provider.colmap.dataset.rst  splatkit.data_provider.colmap.item.rst  splatkit.data_provider.colmap.provider.rst  splatkit.modules.frame.rst  splatkit.modules.rst  splatkit.modules.viewer.rst  splatkit.splat.rst
docs/source/api/modules/: base.rst  evaluator.rst  index.rst
docs/source/customization/: densification.rst
examples/: simple_3dgs.py
examples/2dgs/: simple_2dgs.py
examples/3dgs/: simple_3dgs.py
examples/RaDe-gs/: README.md  loss_fn.py  main.py  mesh_extractor.py  pyproject.toml  renderer.py
examples/object-centric_2dgs/: README.md  densification.py  main.py
examples/simple_2dgs/: main.py
examples/simple_3dgs/: main.py
main/: genindex.html  getting_started.html  index.html  installation.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js
main/.doctrees/: index.doctree  installation.doctree  quickstart.doctree
main/.doctrees/api/: data_provider.doctree  densification.doctree  index.doctree  loss_fn.doctree  renderer.doctree  trainer.doctree
main/.doctrees/api/_autosummary/: splatkit.data_provider.base.doctree  splatkit.data_provider.colmap.config.doctree  splatkit.data_provider.colmap.doctree  splatkit.data_provider.colmap.provider.doctree  splatkit.data_provider.doctree  splatkit.loss_fn.base.doctree  splatkit.loss_fn.doctree  splatkit.modules.base.doctree  splatkit.modules.composite.doctree  splatkit.modules.doctree  splatkit.modules.evaluator.doctree  splatkit.modules.frame.doctree  splatkit.modules.progress_tracker.doctree  (+5 more)
main/.doctrees/customization/: data_providers.doctree  densification.doctree  index.doctree  modules.doctree
main/_modules/: index.html
main/_sources/: getting_started.rst.txt  index.rst.txt  installation.rst.txt
main/_sources/api/: splat.rst.txt
main/_sources/customization/: data_providers.rst.txt  index.rst.txt
main/api/: data_provider.html  densification.html  index.html  loss_fn.html  renderer.html  splat.html  trainer.html
main/api/_autosummary/: splatkit.data_provider.base.html  splatkit.data_provider.colmap.config.html  splatkit.data_provider.colmap.dataset.html  splatkit.data_provider.colmap.html  splatkit.data_provider.colmap.item.html  splatkit.data_provider.colmap.provider.html  splatkit.data_provider.html  splatkit.loss_fn.base.html  splatkit.loss_fn.html  splatkit.modules.base.html  splatkit.modules.composite.html  splatkit.modules.evaluator.html  splatkit.modules.exporter.html  splatkit.modules.frame.html  splatkit.modules.html  splatkit.modules.progress_tracker.html  splatkit.modules.tensorboard.html  splatkit.modules.viewer.html  splatkit.renderer.base.html  splatkit.renderer.html  splatkit.splat.html  splatkit.splat.model.html  splatkit.splat.training_state.html  splatkit.trainer.config.html  splatkit.trainer.distributed.html  splatkit.trainer.html  splatkit.trainer.trainer.html
main/api/modules/: base.html  evaluator.html  exporter.html  index.html  progress_tracker.html  tensorboard.html  viewer.html
main/customization/: data_providers.html  densification.html  index.html  loss_functions.html  modules.html  renderers.html
scripts/: bump_version.py
splatkit/: __init__.py
splatkit/data_provider/: __init__.py  base.py
splatkit/data_provider/colmap/: __init__.py  config.py  dataset.py  item.py  provider.py
splatkit/dataset/: __init__.py  colmap.py  item.py
splatkit/dataset/spc/: abc.py  colmap.py
splatkit/densification/: __init__.py  base.py  default.py  mcmc.py
splatkit/logger/: __init__.py  base.py
splatkit/loss/: __init__.py  abc.py  default.py  masked.py
splatkit/loss_fn/: _2dgs.py  _3dgs.py  __init__.py  base.py  default.py
splatkit/modules/: __init__.py  base.py  composite.py  evaluator.py  exporter.py  frame.py  progress_tracker.py  progressor.py  tensorboard.py  viewer.py
splatkit/renderer/: _2dgs.py  _3dgs.py  __init__.py  abc.py  base.py  rade.py
splatkit/splat/: __init__.py  model.py  test.py  training_state.py
splatkit/trainer/: __init__.py  config.py  distributed.py  trainer.py
splatkit/trianer/: __init__.py  config.py  distributed.py  trainer.py
splatkit/utils/: batched.py  distributed.py  generics.py  knn_utils.py  lazy.py  sh.py
splatkit/visual_hull/: config.py
versions/0.1.0/: .buildinfo  objects.inv  search.html  searchindex.js
versions/0.1.0/.doctrees/: getting_started.doctree
versions/0.1.0/_modules/: index.html
versions/0.1.0/_sources/: quickstart.rst.txt
versions/0.1.0/api/: loss_fn.html  splat.html
versions/0.1.0/customization/: data_providers.html
(+106 files in other folders)
