[project]
name = "splatkit"
version = "0.1.0"
description = "A modular toolkit for 3D and 2D Gaussian Splatting"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Core dependencies
    "numpy<2.0",
    "gsplat>=1.5.3",
    "pycolmap>=3.13.0",
    "imageio>=2.37.2",
    "tyro>=1.0.3",
    "torchmetrics>=1.8.2",
    "matplotlib>=3.10.8",
    "scikit-learn>=1.7.2",
    "opencv-python>=4.11.0.86",
    "plyfile>=1.1.3",
    "dill>=0.4.0",
    "nerfview>=0.1.3",
]

[project.optional-dependencies]
# Real-time viewer support (nerfview integration)
viewer = [
    "nerfview>=0.1.3",
    "viser>=1.0.21",
    "splines>=0.3.3",
]

# Progress tracking and visualization
progress = [
    "tqdm>=4.67.1",
]

# TensorBoard logging
tensorboard = [
    "tensorboard>=2.20.0",
]

# Development tools (testing, linting, formatting)
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

# Documentation building
docs = [
    "sphinx>=7.0.0",
    "furo>=2024.1.0",
    "sphinx-autodoc-typehints>=1.24.0",
    "sphinx-copybutton>=0.5.0",
    "myst-parser>=2.0.0",
]

# Everything (all optional dependencies)
all = [
    "splatkit[viewer,progress,tensorboard]",
]

# Everything including development tools
all-dev = [
    "splatkit[all,dev,docs]",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["splatkit*"]

[tool.pyright]
typeCheckingMode = "standard"
reportImplicitRelativeImport = "warning"
